make tables accessible

--- a/article.html
+++ b/article.html
@@ -139,17 +139,17 @@
                     <col>
                     <col>
                     <colgroup span="2"></colgroup>
-                    <tbody class="thead-dark">
+                    <thead class="thead-dark">
                         <tr>
-                            <td class="align-middle" rowspan="2">Century</td>
-                            <td class="align-middle" rowspan="2">Year</td>
-                            <td class="align-middle" colspan="2">Temperature</td>
+                            <th class="align-middle" rowspan="2" scope="col">Century</th>
+                            <th class="align-middle" rowspan="2" scope="col">Year</th>
+                            <th class="align-middle" colspan="2" scope="colgroup">Temperature</th>
                         </tr>
                         <tr>
-                            <td class="align-middle">Average</td>
-                            <td class="align-middle">Smoothed</td>
+                            <th class="align-middle" scope="col">Average</th>
+                            <th class="align-middle" scope="col">Smoothed</th>
                         </tr>
-                    </tbody>
+                    </thead>
                     <tbody>
                         <tr>
                             <td class="align-middle" rowspan="2">19th century</td>
