added regions, labels, form validation etc.
completed task design & forms

--- a/login.html
+++ b/login.html
@@ -12,15 +12,15 @@
 </head>
 
 <body class="bg-light">
-    <div class="container-fluid d-none d-lg-block my-4 header">
+    <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
+                    <img alt="Lorem Ipsum Institute of Technology Logo" class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
-                        <div class="mb-0 title">Lorem Ipsum
+                        <h1 class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
-                        </div>
+                        </h1>
                     </div>
                 </div>
                 <div class="col-4">
@@ -33,24 +33,24 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
 
-    <div class="container-fluid bg-dark nav">
+    <nav class="container-fluid nav" style="background-color: black;">
         <div class="container">
-            <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
+            <div class="navbar navbar-dark navbar-expand-lg px-0" style="background-color: black;">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
+                    <img alt="Web site logo" class="rounded-right" src="./img/logo.jpg" width="40" height="40">
                 </div>
                 <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
+                    This is the navigation bar toggler<span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <div class="navbar-nav mr-auto">
                         <div class="nav-item">
-                            <a class="nav-link" href="./">Homepage</a>
+                            <a class="nav-link" href="./" style="color: white">Homepage</a>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" style="color: white">Faculties</a>
                             <div class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" style="color: white">Education &amp; research</a>
                             <div class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" style="color: white">Industry &amp; partners</a>
                             <div class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="navbar-nav">
                         <div class="nav-item">
-                            <a class="nav-link" href="./login.html">Login</a>
+                            <a class="nav-link" href="./login.html" style="color: white">Login</a>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
+    </nav>
     <div class="container main" id="main">
         <div class="row no-gutters">
             <div class="col-12 col-md-5 mt-4 login">
@@ -127,19 +126,19 @@
                     <div class="text-danger mb-4 d-none subtitle" id="login-error">Please correct the error(s)</div>
                     <ul class="sr-only" id="login-error-list"></ul>
                     <form id="login-form" novalidate>
-                        <div class="form-group">
-                            <input class="form-control" id="login-email-control" type="email" placeholder="Email" required style="position: relative; top: 10px;">
+                        <div class="form-group" style="margin-bottom: 25px">
+                            <input aria-label="Input Email Field" class="form-control" id="login-email-control" type="email" placeholder="Email" required style="position: relative; top: 10px;">
                             <p style="position: relative; top: -60px;">Email</p>
-                            <small class="invalid-feedback"></small>
+                            <small class="invalid-feedback" style="margin-top: -1.50rem;;" id="invalid-feedback-email"></small>
                         </div>
-                        <div class="form-group">
-                            <input class="form-control" id="login-password-control" type="password" placeholder="Password" style="position: relative; top: 10px;">
+                        <div class="form-group" style="margin-bottom: 15px">
+                            <input aria-label="Input Password Field" class="form-control" id="login-password-control" type="password" placeholder="Password" style="position: relative; top: 10px;">
                             <p style="position: relative; top: -60px;">Password</p>
-                            <small class="invalid-feedback"></small>
+                            <small class="invalid-feedback" style="margin-top: -1.50rem;;" id="invalid-feedback-password"></small>
                         </div>
                         <div class="form-group">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="remember" id="login-remmeber-control">
+                                <input aria-label="Keep Logged In Check Box" class="form-check-input" type="checkbox" value="remember" id="login-remmeber-control">
                                 <label class="form-check-label">Keep me logged in</label>
                             </div>
                         </div>
@@ -155,36 +154,36 @@
                     <div class="text-danger mb-4 d-none subtitle" id="register-error">Please correct the error(s)</div>
                     <ul class="sr-only" id="register-error-list"></ul>
                     <form id="register-form" novalidate>
-                        <div class="form-group">
-                            <p class="form-label" id="register-basic-legend">Basic information
+                        <fieldset class="form-group">
+                            <legend class="form-label" id="register-basic-legend">Basic information
                                 <small class="text-secondary">(optional)</small>
-                            </p>
+                            </legend>
                             <div class="form-row">
                                 <div class="form-group col-12 col-lg-6">
                                     <p>First name</p>
-                                    <input class="form-control" type="text" id="register-first-name-control" placeholder="First name" required>
+                                    <input aria-label="Input First Name Field" class="form-control" type="text" id="register-first-name-control" placeholder="First name" required>
                                     <small class="invalid-feedback"></small>
                                 </div>
                                 <div class="form-group col-12 col-lg-6">
                                     <p>Last name</p>
-                                    <input class="form-control" type="text" id="register-last-name-control" placeholder="Last name" required>
+                                    <input aria-label="Input Laste Name Field" class="form-control" type="text" id="register-last-name-control" placeholder="Last name" required>
                                     <small class="invalid-feedback"></small>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <p>Email</p>
-                                <input class="form-control" id="register-email-control" type="email" placeholder="Email" required>
+                                <input aria-label="Input Email Field" class="form-control" id="register-email-control" type="email" placeholder="Email" required>
                                 <small class="invalid-feedback"></small>
                             </div>
                             <div class="form-group">
                                 <p>Password</p>
-                                <input class="form-control" id="register-password-control" type="password" placeholder="Password" required>
+                                <input aria-label="Set Password Field" class="form-control" id="register-password-control" type="password" placeholder="Password" required>
                                 <small class="invalid-feedback"></small>
                                 <small id="register-password-help" class="form-text text-muted">Your password must be 8-16 characters long and contain both letters and numbers.</small>
                             </div>
                             <div class="form-group">
                                 <p>Programme</p>
-                                <select class="form-control" id="register-programme-control" required>
+                                <select aria-label="Input Education Option" class="form-control" id="register-programme-control" required>
                                     <option value="">Please select your education or research programme</option>
                                     <option value="bachelor">Bachelor</option>
                                     <option value="master">Master</option>
@@ -193,30 +192,30 @@
                                 </select>
                                 <small class="invalid-feedback"></small>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <p class="form-label" id="register-address-legend">Additional information
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <legend class="form-label" id="register-address-legend">Additional information
                                 <small class="text-secondary">(optional)</small>
-                            </p>
+                            </legend>
                             <div class="form-group">
                                 <p>Street</p>
-                                <input class="form-control" id="register-street-control" type="text" placeholder="Street">
+                                <input aria-label="Input Street Field" class="form-control" id="register-street-control" type="text" placeholder="Street">
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-12 col-lg-5">
                                     <p>City</p>
-                                    <input class="form-control" id="register-city-control" type="text" placeholder="City">
+                                    <input aria-label="Input City Field" class="form-control" id="register-city-control" type="text" placeholder="City">
                                 </div>
                                 <div class="form-group col-12 col-lg-4">
                                     <p>State</p>
-                                    <input class="form-control" id="register-state-control" type="text" placeholder="State">
+                                    <input aria-label="Input State Field" class="form-control" id="register-state-control" type="text" placeholder="State">
                                 </div>
                                 <div class="form-group col-12 col-lg-3">
                                     <p>Zip</p>
-                                    <input class="form-control" id="register-zip-control" type="text" placeholder="Zip">
+                                    <input aria-label="Input Zip Field" class="form-control" id="register-zip-control" type="text" placeholder="Zip">
                                 </div>
                             </div>
-                        </div>
+                        </fieldset>
                         <button class="btn btn-primary" id="register-register-button">Register</button>
                     </form>
                 </div>
@@ -224,7 +223,7 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-dark mt-4 footer">
+    <footer class="container-fluid mt-4 footer" style="background-color: black;">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
@@ -234,7 +233,7 @@
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
-    </div>
+    </footer>
 
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/popper.js"></script>
