--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body class="d-flex flex-column bg-light">
-    <div class="container-fluid d-none d-lg-block my-4 header">
+    <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
+                    <img alt="Lorem Ipsum Institute of Technology Logo" class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
-                        <div class="mb-0 title">Lorem Ipsum
+                        <h1 class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
-                        </div>
+                        </h1>
                     </div>
                 </div>
                 <div class="col-4">
@@ -33,24 +33,24 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
 
-    <div class="container-fluid bg-dark nav">
+    <nav class="container-fluid nav" style="background-color: black;">
         <div class="container">
-            <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
+            <div class="navbar navbar-dark navbar-expand-lg px-0" style="background-color: black;">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
+                    <img alt="Web site logo" class="rounded-right" src="./img/logo.jpg" width="40" height="40">
                 </div>
                 <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
+                    This is the navigation bar toggler<span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <div class="navbar-nav mr-auto">
                         <div class="nav-item">
-                            <a class="nav-link" href="./">Homepage</a>
+                            <a class="nav-link" href="./" style="color: white">Homepage</a>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" style="color: white">Faculties</a>
                             <div class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" style="color: white">Education &amp; research</a>
                             <div class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" style="color: white">Industry &amp; partners</a>
                             <div class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="navbar-nav">
                         <div class="nav-item">
-                            <a class="nav-link" href="./login.html">Login</a>
+                            <a class="nav-link" href="./login.html" style="color: white">Login</a>
                         </div>
                     </div>
                 </div>
@@ -117,15 +117,15 @@
                 </div>
             </div>
         </div>
-    </div>
+    </nav>
 
-    <div class="container main" id="main">
+    <main class="container main" id="main">
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
                 <div class="p-4 mt-4 mr-lg-3 bg-white news">
-                    <div class="text-primary mb-4 title">News &amp; events</div>
+                    <h2 class="text-primary mb-4 title">News &amp; events</h2>
                     <div class="media mt-4">
-                        <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
+                        <img alt="Picture of an ice berg" class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
                         <div class="media-body">
                             <div class="text-info mt-0 mb-2 subtitle">
                                 <a href="./article.html">Global temperature record</a>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="media mt-4">
-                        <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
+                        <img alt="Picture of outer space" class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
                         <div class="media-body">
                             <div class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="media mt-4">
-                        <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
+                        <img alt="Picture of a robot" class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
                         <div class="media-body">
                             <div class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
@@ -174,14 +174,14 @@
             </div>
             <div class="col-12 col-lg-6">
                 <div class="p-4 mt-4 bg-white studies">
-                    <div class="text-primary mb-4 title">Studies</div>
-                    <p class="font-weight-bold">Advance your scientific education</p>
+                    <h2 class="text-primary mb-4 title">Studies</h2>
+                    <h3 class="font-weight-bold">Advance your scientific education</h3>
                     <div class="list-unstyled ml-3">
                         <p>
                             <a href="./empty.html?title=Bachelor">Bachelor programmes</a>
                         </p>
                         <p>
-                            <a href="./empty.html?title=Bachelor">Master programmes</a>
+                            <a href="./empty.html?title=Master">Master programmes</a>
                         </p>
                         <p>
                             <a href="./empty.html?title=Continuing+education">Continuing education programmes</a>
@@ -190,12 +190,12 @@
                 </div>
 
                 <div class="p-4 mt-4 bg-white researches">
-                    <div class="text-primary mb-4 title">Researches</div>
-                    <p class="font-weight-bold">Join our renowned research groups</p>
+                    <h2 class="text-primary mb-4 title">Researches</h2>
+                    <h3 class="font-weight-bold">Join our renowned research groups</h3>
                     <p class="ml-3">
                         <a href="./empty.html?title=Doctorate">Doctoral programmes</a>
                     </p>
-                    <p class="font-weight-bold">Latest publications</p>
+                    <h3 class="font-weight-bold">Latest publications</h3>
                     <div class="list-unstyled ml-3">
                         <p>
                             <a href="./empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
@@ -217,9 +217,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
-    <div class="container-fluid bg-dark mt-4 footer">
+    <footer class="container-fluid mt-4 footer" style="background-color: black;">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About">About</a>
@@ -229,7 +229,7 @@
                 <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
-    </div>
+    </footer>
 
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/popper.js"></script>
