--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
                 <div class="col-8 media">
                     <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
-                        <div class="mb-0 title">Lorem Ipsum
+                        <h1 class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
-                        </div>
+                        </h1>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="btn-toolbar justify-content-end">
+                        <a href="#news" class="skip-content-link">
+                            Skip to content
+                        </a>
                         <div class="btn-group btn-group-sm">
                             <button class="btn btn-dark font-increase-button" id="font-increase-button">A+</button>
                             <button class="btn btn-dark font-decrease-button" id="font-decrease-button">A-</button>
@@ -35,7 +38,7 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-dark nav">
+    <nav class="container-fluid bg-dark nav" aria-label="Main menu">
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
@@ -45,62 +48,62 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
-                    <div class="navbar-nav mr-auto">
-                        <div class="nav-item">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
                             <a class="nav-link" href="./">Homepage</a>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties">Faculties</a>
-                            <div class="dropdown-menu">
-                                <div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <button class="nav-link dropdown-toggle btn-dark no-border" href="#" id="nav-bar-faculties" aria-expanded="false">Faculties</button>
+                            <ul class="dropdown-menu">
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Engineering">Engineering</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education">Education &amp; research</a>
-                            <div class="dropdown-menu">
-                                <div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <button class="nav-link dropdown-toggle btn-dark no-border" href="#" id="nav-bar-education" aria-expanded="false">Education &amp; research</button>
+                            <ul class="dropdown-menu">
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Master">Master</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Continuing+education">Continuing education</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Doctorate">Doctorate</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry">Industry &amp; partners</a>
-                            <div class="dropdown-menu">
-                                <div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <button class="nav-link dropdown-toggle btn-dark no-border" href="#" id="nav-bar-industry" aria-expanded="false">Industry &amp; partners</button>
+                            <ul class="dropdown-menu">
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Commercialization">Commercialization</a>
-                                </div>
-                                <div>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                     <div class="navbar-nav">
                         <div class="nav-item">
                             <a class="nav-link" href="./login.html">Login</a>
@@ -117,19 +120,20 @@
                 </div>
             </div>
         </div>
-    </div>
+    </nav>
 
     <div class="container main" id="main">
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
-                <div class="p-4 mt-4 mr-lg-3 bg-white news">
-                    <div class="text-primary mb-4 title">News &amp; events</div>
+                <div class="p-4 mt-4 mr-lg-3 bg-white news" id="news">
+                    <h2 class="text-primary mb-4 title">News &amp; events</h2>
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
                         <div class="media-body">
-                            <div class="text-info mt-0 mb-2 subtitle">
+                            <a href="#studies" class="skip-content-link">Skip to next section</a>
+                            <h3 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./article.html">Global temperature record</a>
-                            </div>
+                            </h3>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest
                                 year on record.
@@ -142,9 +146,9 @@
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
                         <div class="media-body">
-                            <div class="text-info mt-0 mb-2 subtitle">
+                            <h3 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
-                            </div>
+                            </h3>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
                                 dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
@@ -157,9 +161,9 @@
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
                         <div class="media-body">
-                            <div class="text-info mt-0 mb-2 subtitle">
+                            <h3 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
-                            </div>
+                            </h3>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
                                 res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute. Est enim
@@ -174,23 +178,24 @@
             </div>
             <div class="col-12 col-lg-6">
                 <div class="p-4 mt-4 bg-white studies">
-                    <div class="text-primary mb-4 title">Studies</div>
+                    <h2 class="text-primary mb-4 title" id="studies">Studies</h2>
+                    <a href="#research" class="skip-content-link">Skip to next section</a>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <div class="list-unstyled ml-3">
-                        <p>
+                        <h3 class="text-info mt-0 mb-2 subtitle">
                             <a href="./empty.html?title=Bachelor">Bachelor programmes</a>
-                        </p>
-                        <p>
+                        </h3>
+                        <h3 class="text-info mt-0 mb-2 subtitle">
                             <a href="./empty.html?title=Bachelor">Master programmes</a>
-                        </p>
-                        <p>
+                        </h3>
+                        <h3 class="text-info mt-0 mb-2 subtitle">
                             <a href="./empty.html?title=Continuing+education">Continuing education programmes</a>
-                        </p>
+                        </h3>
                     </div>
                 </div>
 
                 <div class="p-4 mt-4 bg-white researches">
-                    <div class="text-primary mb-4 title">Researches</div>
+                    <h2 class="text-primary mb-4 title" id="research">Researches</h2>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
                         <a href="./empty.html?title=Doctorate">Doctoral programmes</a>
