--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
+                    <img class="align-self-center mr-3 rounded-right logo" alt="University Logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
                         <h1 class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
@@ -128,7 +128,7 @@
                 <div class="p-4 mt-4 mr-lg-3 bg-white news" id="news">
                     <h2 class="text-primary mb-4 title">News &amp; events</h2>
                     <div class="media mt-4">
-                        <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
+                        <img class="my-1 mr-2 rounded-right" alt="Large iceberg in the sea. More icebergs in the background" src="./img/iceberg.jpg">
                         <div class="media-body">
                             <a href="#studies" class="skip-content-link">Skip to next section</a>
                             <h3 class="text-info mt-0 mb-2 subtitle">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="media mt-4">
-                        <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
+                        <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photography of a galaxy">
                         <div class="media-body">
                             <h3 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="media mt-4">
-                        <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
+                        <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Small robots on two wheels with two arms">
                         <div class="media-body">
                             <h3 class="text-info mt-0 mb-2 subtitle">
                                 <a href="./empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
