--- a/article.html
+++ b/article.html
@@ -123,10 +123,11 @@
         <div class="p-5 bg-white">
             <div class="text-primary text-center mb-4 title">Global temperature record shows 2016 as the warmest year on record</div>
             <div class="text-center wrapper">
-                <img src="./img/temperature.jpg" class="figure-img img-fluid">
+                <img src="./img/temperature.jpg" class="figure-img img-fluid" longdesc="desc.txt">
                 <p class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve indicates
                     the annual average temperature and the black curve shows the smoothed result. Over the last two centuries,
                     the mean tempurature has increased by around 1 degree Celcius.</p>
+
             </div>
             <p>The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
                 various spans of time. The recently data published by NASA is one of the most detailed information exists
