list items, additional headers
further structures

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </header>
-    <nav class="container-fluid bg-dark nav" aria-label="Main menu" style="background-color: black;">
+    <nav class="container-fluid nav" aria-label="Main menu" style="background-color: black;">
         <div class="container">
             <div class="navbar navbar-dark navbar-expand-lg px-0" style="background-color: black;">
                 <div class="navbar-brand d-lg-none">
