--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                     This is the navigation bar toggler<span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
-                    <div class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <div class="nav-item">
                             <a class="nav-link" href="./" style="color: white">Homepage</a>
                         </div>
@@ -53,19 +53,19 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" style="color: white">Faculties</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences">Applied sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences"> <li>Applied sciences</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning"><li>Architecture &amp; planning</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment"><li>Construction &amp; environment</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Engineering">Engineering</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Engineering"><li>Engineering</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences"><li>Health &amp; social sciences</li></a>
                                 </div>
                             </div>
                         </div>
@@ -73,16 +73,16 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" style="color: white">Education &amp; research</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Bachelor">Bachelor</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Bachelor"><li>Bachelor</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Master">Master</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Master"><li>Master</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education">Continuing education</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education"><li>Continuing Education</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Doctorate">Doctorate</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Doctorate"><li>Doctorate</li></a>
                                 </div>
                             </div>
                         </div>
@@ -90,17 +90,17 @@
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" style="color: white">Industry &amp; partners</a>
                             <div class="dropdown-menu">
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Public+relations">Public relations</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Public+relations"><li>Public Relations</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Commercialization">Commercialization</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Commercialization"><li>Commercialization</li></a>
                                 </div>
                                 <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
+                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners"><li>Sponsors &amp; Partners</li></a>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </ul>
                     <div class="navbar-nav">
                         <div class="nav-item">
                             <a class="nav-link" href="./login.html" style="color: white">Login</a>
@@ -122,7 +122,7 @@
         <div class="row no-gutters">
             <div class="col-12 col-md-5 mt-4 login">
                 <div class="p-4 mr-md-3 bg-white">
-                    <div class="text-primary mb-4 title">Login</div>
+                    <h2 class="text-primary mb-4 title">Login</h2>
                     <div class="text-danger mb-4 d-none subtitle" id="login-error">Please correct the error(s)</div>
                     <ul class="sr-only" id="login-error-list"></ul>
                     <form id="login-form" novalidate>
@@ -150,12 +150,12 @@
 
             <div class="col-12 col-md-7 mt-4 register">
                 <div class="p-4 bg-white">
-                    <div class="text-primary mb-4 title">Create new account</div>
+                    <h2 class="text-primary mb-4 title">Create new account</h2>
                     <div class="text-danger mb-4 d-none subtitle" id="register-error">Please correct the error(s)</div>
                     <ul class="sr-only" id="register-error-list"></ul>
                     <form id="register-form" novalidate>
                         <fieldset class="form-group">
-                            <legend class="form-label" id="register-basic-legend">Basic information
+                            <legend class="form-label" id="register-basic-legend"><h3>Basic Information</h3>
                                 <small class="text-secondary">(optional)</small>
                             </legend>
                             <div class="form-row">
@@ -194,7 +194,7 @@
                             </div>
                         </fieldset>
                         <fieldset class="form-group">
-                            <legend class="form-label" id="register-address-legend">Additional information
+                            <legend class="form-label" id="register-address-legend"><h3>Additional Information</h3> 
                                 <small class="text-secondary">(optional)</small>
                             </legend>
                             <div class="form-group">
