updated lists, added label validation

--- a/empty.html
+++ b/empty.html
@@ -50,8 +50,8 @@
                             <a class="nav-link" href="./" style="color: white">Homepage</a>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" style="color: white">Faculties</a>
-                            <div class="dropdown-menu">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" style="color: white" aria-expanded="false">Faculties</a>
+                            <ul class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Applied+sciences"> <li>Applied sciences</li></a>
                                 </div>
@@ -67,11 +67,11 @@
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences"><li>Health &amp; social sciences</li></a>
                                 </div>
-                            </div>
+                            </ul>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" style="color: white">Education &amp; research</a>
-                            <div class="dropdown-menu">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" style="color: white" aria-expanded="false">Education &amp; research</a>
+                            <ul class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Bachelor"><li>Bachelor</li></a>
                                 </div>
@@ -84,11 +84,11 @@
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Doctorate"><li>Doctorate</li></a>
                                 </div>
-                            </div>
+                            </ul>
                         </div>
                         <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" style="color: white">Industry &amp; partners</a>
-                            <div class="dropdown-menu">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" style="color: white" aria-expanded="false">Industry &amp; partners</a>
+                            <ul class="dropdown-menu">
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Public+relations"><li>Public Relations</li></a>
                                 </div>
@@ -98,8 +98,7 @@
                                 <div>
                                     <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners"><li>Sponsors &amp; Partners</li></a>
                                 </div>
-                            </div>
-                        </div>
+                            </ul>
                     </ul>
                     <div class="navbar-nav">
                         <div class="nav-item">
