--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                     This is the navigation bar toggler<span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
-
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="./" style="color: white">Homepage</a>
@@ -182,15 +181,15 @@
                     <a href="#research" class="skip-content-link">Skip to next section</a>
                     <h3 class="font-weight-bold">Advance your scientific education</h3>
                     <div class="list-unstyled ml-3">
-                       <h3 class="text-info mt-0 mb-2 subtitle">
+                       <p class="text-info mt-0 mb-2 subtitle">
                             <a href="./empty.html?title=Bachelor">Bachelor programmes</a>
-                        </h3>
-                        <h3 class="text-info mt-0 mb-2 subtitle">
+                       </p>
+                        <p class="text-info mt-0 mb-2 subtitle">
                             <a href="./empty.html?title=Bachelor">Master programmes</a>
-                        </h3>
-                        <h3 class="text-info mt-0 mb-2 subtitle">
+                        </p>
+                        <p class="text-info mt-0 mb-2 subtitle">
                             <a href="./empty.html?title=Continuing+education">Continuing education programmes</a>
-                        </h3>
+                        </p>
                     </div>
                 </div>
 
